# blazing

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  LICENSE  docker-compose.yml
.sqlx/: query-12ea24e65293df11f97cde8770a7ee97189761aabd30d915157e7f254dad6720.json  query-1b05b943b93d1be9f3f9d3ae6ce3a997a0de1230f6fa3014094c80e04f3e9fbb.json  query-3cbf56c36a5e9c0c263f30733d0884e60e86137650532e78d3038d1a0472f496.json  query-572c3cb38e136e125acf36ea4cfc3b8855b8ac52217a78ce4e84c37a06664000.json  query-917dc788f19a6930d0902dd580a3b1069e26b43593332b684c4bcd5349fd6ac8.json  query-c79c1709b25ce2a50a4f8b2e97e3edaa431a372e5e5595d8550f8615fedf193f.json  query-cc26cde21c8697d529f93d7fef31a77f8e11fa77ffb9110038f46a95f7f56ca3.json  query-da554493ce61284fed2f9192c210bb7b07a5d43bd9c4e1365db5a79e408fca49.json  query-e548941a76fa0d82055608a8b8c791d1f7d19263d94255ee7ca27342d4b0334e.json
crates/auth/: Cargo.toml
crates/auth/src/: handlers.rs  lib.rs  middleware.rs  routes.rs  service.rs
crates/backend/auth/: Cargo.toml
crates/backend/files/: Cargo.toml
crates/backend/models/: Cargo.toml
crates/backend/voice/: Cargo.toml
crates/chat/: Cargo.toml
crates/chat/src/: handlers.rs  lib.rs  routes.rs  service.rs  ws_handler.rs
crates/guilds/: Cargo.toml
crates/models/: Cargo.toml
crates/models/src/: error.rs  lib.rs  message.rs  user.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/wasm/: Cargo.toml
crates/websocket/: Cargo.toml
crates/websocket/src/: broadcaster.rs  handlers.rs  lib.rs  routes.rs  service.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.scss
frontend/src-tauri/: Cargo.toml
migrations/: 20260210031409_initial_schema.sql  20260215062618_create_guild_members.sql
