[workspace]
members = [
    "crates/models",
    "crates/auth",
    "crates/chat",
    "crates/files",
    "crates/voice",
    "crates/guilds",
    "crates/server",
    
    "frontend/wasm",
    "frontend/src-tauri",
]
resolver = "2"

[workspace.package]
name = "blazing"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
blazing-models = { path = "crates/models" }
blazing-auth = { path = "crates/auth" }
blazing-chat = { path = "crates/chat" }
blazing-files = { path = "crates/files" }
blazing-voice = { path = "crates/voice" }
blazing-guilds = { path = "crates/guilds" }
