[workspace]
members = [
    "crates/models",
    "crates/auth",
    "crates/chat",
    "crates/files",
    "crates/voice",
    "crates/guilds",
    "crates/server",
    "crates/websocket",
    
    "frontend/wasm",
    "frontend/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
blazing-models = { path = "crates/models" }
blazing-auth = { path = "crates/auth" }
blazing-chat = { path = "crates/chat" }
blazing-files = { path = "crates/files" }
blazing-voice = { path = "crates/voice" }
blazing-guilds = { path = "crates/guilds" }
blazing-ws = { path = "crates/websocket" }

axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
bcrypt = "0.18.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
futures = "0.3.31"
dashmap = "6.1.0"