[package]
name = "blazing-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
blazing-models = { workspace = true }
axum = { workspace = true }