[package]
name = "blazing-chat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
blazing-models = { workspace = true }
axum = { workspace = true }
blazing-auth = { workspace = true }
tracing = { workspace = true }
blazing-ws = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }