[package]
name = "blazing-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }