[package]
name = "blazing-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
sqlx = { workspace = true }
blazing-auth = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
blazing-chat = { workspace = true }
tracing-subscriber = "0.3.22"
tracing = { workspace = true }
tower-http = { version = "0.6.8", features = ["trace"] }