[package]
name = "blazing-ws"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true, features = ["ws"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }